# Computational-Mathematics

./: CMakeLists.txt
Calc/headers/: ZEROIN.h
Calc/lib/: ZEROIN.cpp
Coursach/: Coursach.cpp
FirstLab/: FirstLab.cpp  Вариант__B-14.doc
SecLab/: SecondLab.cpp  Вариант__R1_10.doc
ThirdLab/: ThirdLab.cpp  Вариант__V_07.doc
